--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
-@import url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css");
-
-html{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-
-    font-size: 64.5%;
-    background: #ffffff;
+.btn{
+ margin-top: 4px;
 }
 
 body{
