--- a/src/app/components/create-employee/create-employee.component.html
+++ b/src/app/components/create-employee/create-employee.component.html
@@ -5,12 +5,13 @@
   <!--La sintaxis [()] BananaInBox es un Two-Way Binding-->
   <form (ngSubmit) = "onSubmitForm()">
 
+    <h1>[(ngModel)]</h1>
+
       <div class="form-group">
           <label> Document</label>
           <input type="text" class ="form-control" id = "document"
               [(ngModel)] = "employee.document" name = "document">
       </div>
-
       <div class="form-group">
           <label> Name</label>
           <input type="text" class ="form-control" id = "name"
@@ -26,7 +27,7 @@
       <div class="form-group">
           <label> Salary</label>
           <input type="number" class ="form-control" id = "salary"
-              [(ngModel)] = "employee.salary" name = "salary">
+              [(ngModel)] = "employee.salary.value" name = "salary">
       </div>
 
       <div class="form-group">
@@ -34,6 +35,7 @@
         <input type="text" class ="form-control" id = "startDate"
             [(ngModel)] = "employee.startDate" name = "startDate">
     </div>
+
 
       <button class = "btn btn-success" type ="submit">Send</button>
 
