--- a/src/app/components/update-employee/update-employee.component.html
+++ b/src/app/components/update-employee/update-employee.component.html
@@ -25,8 +25,8 @@
 
       <div class="form-group">
           <label> Salary</label>
-          <input type="number" class ="form-control" id = "salary"
-              [(ngModel)] = "employee.salary" name = "salary">
+          <input type="text" class ="form-control" id = "salary"
+              [(ngModel)] = "employee.salary.value" name = "salary">
       </div>
 
       <div class="form-group">
