--- a/src/app/components/create-employee/create-employee.component.html
+++ b/src/app/components/create-employee/create-employee.component.html
@@ -5,8 +5,6 @@
   <!--La sintaxis [()] BananaInBox es un Two-Way Binding-->
   <form (ngSubmit) = "onSubmitForm()">
 
-    <h1>[(ngModel)]</h1>
-
       <div class="form-group">
           <label> Document</label>
           <input type="text" class ="form-control" id = "document"
@@ -36,8 +34,11 @@
             [(ngModel)] = "employee.startDate" name = "startDate">
     </div>
 
+    <div>
+      <input type="text" id="custId" disabled  name="custId" value=" {{errorMessage.error.message}}" style="padding-bottom:8px; color: red;border: 0;outline: 0; background-color: white;">
+    </div>
 
-      <button class = "btn btn-success" type ="submit">Send</button>
+    <button class = "btn btn-success" type ="submit">Send</button>
 
   </form>
 </div>
