--- a/src/app/components/update-employee/update-employee.component.html
+++ b/src/app/components/update-employee/update-employee.component.html
@@ -26,7 +26,7 @@
       <div class="form-group">
           <label> Salary</label>
           <input type="text" class ="form-control" id = "salary"
-              [(ngModel)] = "employee.salary.value" name = "salary">
+              [(ngModel)]="employee.salary.value" name = "salary">
       </div>
 
       <div class="form-group">
@@ -35,7 +35,13 @@
             [(ngModel)] = "employee.startDate" name = "startDate">
     </div>
 
-      <button class = "btn btn-success" type ="submit">Send</button>
+    <div>
+      <input type="text" id="custId" disabled  name="custId" value=" {{errorMessage.error.message}}" style="padding-bottom:8px; color: red;border: 0;outline: 0; background-color: white;">
+    </div>
+
+
+
+    <button class = "btn btn-success" type ="submit">Send</button>
 
   </form>
 </div>
