--- a/src/app/components/liquidacion-employee/liquidacion-employee.component.html
+++ b/src/app/components/liquidacion-employee/liquidacion-employee.component.html
@@ -1,5 +1,5 @@
 <div class="col-sm-6 offset-sm-3">
-  <h3> Update Employee </h3>
+  <h3> Liquidacion Employee </h3>
 
   <!--Usamos Binging de angular para llamar al método del .ts asociado-->
   <!--La sintaxis [()] BananaInBox es un Two-Way Binding-->
@@ -18,29 +18,19 @@
       </div>
 
       <div class="form-group">
-          <label> Job</label>
-          <input type="text" class ="form-control" id = "job"
-              [(ngModel)] = "employee.job" name = "job">
-      </div>
-
-      <div class="form-group">
-          <label> Salary</label>
-          <input type="text" class ="form-control" id = "salary"
-              [(ngModel)]="employee.salary.value" name = "salary">
-      </div>
-
-      <div class="form-group">
-        <label> Start Date</label>
-        <input type="text" class ="form-control" id = "startDate"
-            [(ngModel)] = "employee.startDate" name = "startDate">
-    </div>
+        <label> Select reason</label>
+        <select class="form-control" name="miselect" [(ngModel)]="seleccionado">
+        <option [value]="item" *ngFor="let item of listamotivos">{{item}}</option>
+        </select>
+        </div>
 
     <div class="form-group">
       <input type="text" id="custId" disabled class ="form-control" name="custId" value=" {{errorMessage.error.message}}" style="color: red;border: 0;outline: 0; background-color: white;">
     </div>
 
 
-    <button class = "btn btn-success" type ="submit">Send</button>
+
+    <button class = "btn btn-danger" type ="submit">Liquidar Empleado</button>
 
   </form>
 </div>
