--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -25,7 +25,7 @@
             <td>{{emp.salary.value}}</td>
             <button (click) = "updateEmployee(emp.id)" class = "btn btn-info"> Edit</button>
             <button (click) = "deleteEmployee(emp.id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-            <button (click) = "liquidacionEmployee(emp.id)" class = "btn btn-danger" style="margin-left: 10px"> End Contract</button>
+            <button (click) = "liquidacionEmployee(emp.id)" class = "btn btn-danger" style="margin-left: 10px"> Liquidar</button>
 
         </tr>
     </tbody>
