agregando salary component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
           <li class = "nav-item">
               <a routerLink="/createemployee" routerLinkActive="active" class="nav-link" >Create Employee</a>
           </li>
+
+          <li class = "nav-item">
+            <a routerLink="/createsalary" routerLinkActive="active" class="nav-link" >New Salary</a>
+        </li>
       </ul>
   </nav>
 
