agregando salary component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,6 @@
           <li class = "nav-item">
               <a routerLink="/createemployee" routerLinkActive="active" class="nav-link" >Create Employee</a>
           </li>
-
-          <li class = "nav-item">
-            <a routerLink="/createsalary" routerLinkActive="active" class="nav-link" >New Salary</a>
-        </li>
       </ul>
   </nav>
 
@@ -41,7 +37,7 @@
 </html>
 
 <!-- app-routing redirige los contenidos definidos en su archivo .ts-->
-    <div class="container">
+    <div class="container-fluid">
       <router-outlet></router-outlet>
     </div>
 
