--- a/src/app/components/update-employee/update-employee.component.html
+++ b/src/app/components/update-employee/update-employee.component.html
@@ -25,7 +25,7 @@
 
       <div class="form-group">
           <label> Salary</label>
-          <input type="text" class ="form-control" id = "salary"
+          <input disabled type="text" class ="form-control" id = "salary"
               [(ngModel)]="employee.salary.value" name = "salary">
       </div>
 
