historico de salarios

--- a/src/app/components/ver-mas/ver-mas.component.html
+++ b/src/app/components/ver-mas/ver-mas.component.html
@@ -23,7 +23,7 @@
     <button (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Crear nuevo salario</button>
   </div>
   <div class="form-group col">
-    <button  (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Ver historial de salarios</button>
+    <button  (click) = "verhistorialsalarios(employee.id)" class = "form-control btn btn-success" type ="submit">Ver historial de salarios</button>
   </div>
   <div class="form-group col">
     <button   (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Ver liquidacion</button>
