--- a/src/app/components/create-employee/create-employee.component.html
+++ b/src/app/components/create-employee/create-employee.component.html
@@ -23,7 +23,7 @@
       <div class="form-group">
           <label> Salary</label>
           <input type="number" class ="form-control" id = "salary"
-              [(ngModel)] = "employee.salary.value" name = "salary">
+              [(ngModel)] = "employee.salary.salary" name = "salary">
       </div>
 
       <div class="form-group">
