--- a/src/app/components/create-salary/create-salary.component.html
+++ b/src/app/components/create-salary/create-salary.component.html
@@ -16,14 +16,17 @@
       <div class="form-group">
         <label> New Salary</label>
         <input type="text" class ="form-control" id = "amount"
-            [(ngModel)] = "employee.salary.value" name = "amount">
+            [(ngModel)] = "employee.salary.salary" name = "amount">
     </div>
 
     <div class="form-group">
       <input type="text" id="custId" disabled class ="form-control" name="custId" value=" {{errorMessage.error.message}}" style="color: red;border: 0;outline: 0; background-color: white;">
     </div>
 
-    <button class = "btn btn-success" type ="submit">Send</button>
+    <div class="form-group">
+    <button class = "btn btn-success form-control" type ="submit">Send</button>
+    <button   (click) = "vermas(employee.id)" class = "btn btn-danger form-control" type ="submit">Volver</button>
+  </div>
 
   </form>
 </div>
