--- a/src/app/components/update-employee/update-employee.component.html
+++ b/src/app/components/update-employee/update-employee.component.html
@@ -24,7 +24,7 @@
       <div class="form-group">
           <label> Salary</label>
           <input disabled type="text" class ="form-control" id = "salary"
-              [(ngModel)]="employee.salary.value" name = "salary">
+              [(ngModel)]="employee.salary.salary" name = "salary">
       </div>
 
       <div class="form-group">
