--- a/src/app/components/ver-mas/ver-mas.component.html
+++ b/src/app/components/ver-mas/ver-mas.component.html
@@ -24,7 +24,7 @@
     <button  (click) = "verhistorialsalarios(employee.id)" class = "form-control btn btn-success" type ="submit">Ver historial de salarios</button>
   </div>
   <div class="form-group col">
-    <button   (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Ver liquidacion</button>
+    <button   (click) = "verhistorialliquidacion(employee.id)" class = "form-control btn btn-success" type ="submit">Ver liquidacion</button>
   </div>
 
 
