agregar validaciones y liquidacion

--- a/src/app/components/liquidacion-list/liquidacion-list.component.html
+++ b/src/app/components/liquidacion-list/liquidacion-list.component.html
@@ -5,6 +5,17 @@
             <th>id</th>
             <th>fechaFin</th>
             <th>Motivo</th>
+            <th>Auxilio de transporte</th>
+            <th>Salario</th>
+            <th>Fecha inicio</th>
+            <th>Fecha fin</th>
+            <th>Dias laborados</th>
+            <th>Salario base</th>
+            <th>Cesantias</th>
+            <th>Vacaciones</th>
+            <th>Intereses cesantias</th>
+            <th>Prima servicios</th>
+            <th>Total liquidacion</th>
         </tr>
     </thead>
 
@@ -13,7 +24,18 @@
             <td>{{emp.idEmployee}}</td>
             <td>{{emp.fechaFin}}</td>
             <td>{{emp.motivo}}</td>
-        </tr>
+            <td>{{emp.aux_transporte}}</td>
+            <td>{{emp.salario}}</td>
+            <td>{{emp.fecha_inicio}}</td>
+            <td>{{emp.fecha_fin}}</td>
+            <td>{{emp.dias_laborados}}</td>
+            <td>{{emp.salario_base}}</td>
+            <td>{{emp.cesantias}}</td>
+            <td>{{emp.vacaciones}}</td>
+            <td>{{emp.intereses_cesantias}}</td>
+            <td>{{emp.prima_servicios}}</td>
+            <td>{{emp.total_liquidacion}}</td>
+          </tr>
     </tbody>
 </table>
 
