--- a/src/app/components/ver-mas/ver-mas.component.html
+++ b/src/app/components/ver-mas/ver-mas.component.html
@@ -18,7 +18,7 @@
 
 
   <div class="form-group col">
-    <button (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Crear nuevo salario</button>
+    <button [disabled]="employee.status !== 'Activo'" (click) = "editarsalario(employee.id)" class = "form-control btn btn-success" type ="submit">Crear nuevo salario</button>
   </div>
   <div class="form-group col">
     <button  (click) = "verhistorialsalarios(employee.id)" class = "form-control btn btn-success" type ="submit">Ver historial de salarios</button>
