agregando mas configuraciones

--- a/src/app/components/ver-mas/ver-mas.component.html
+++ b/src/app/components/ver-mas/ver-mas.component.html
@@ -26,6 +26,9 @@
   <div class="form-group col">
     <button   (click) = "verhistorialliquidacion(employee.id)" class = "form-control btn btn-success" type ="submit">Ver liquidacion</button>
   </div>
+  <div class="form-group col">
+    <button   (click) = "verListEmployees()" class = "form-control btn btn-danger" type ="submit">Volver</button>
+  </div>
 
 
 
