--- a/src/app/components/verhistorialsalarios/verhistorialsalarios.component.html
+++ b/src/app/components/verhistorialsalarios/verhistorialsalarios.component.html
@@ -20,6 +20,6 @@
 </table>
 
 <div class="form-group col">
-  <button   (click) = "vermas(employee.id)" class = "form-control btn btn-success" type ="submit">Volver</button>
+  <button   (click) = "vermas(employee.id)" class = "form-control btn btn-danger" type ="submit">Volver</button>
 </div>
 
